# OpenJK

./: CMakeLists.txt  README.md
code/: CMakeLists.txt
code/cgame/: cg_draw.cpp
code/client/: cl_chat.cpp  cl_irc.cpp  cl_main.cpp  cl_memes.cpp  cl_scrn.cpp  client.h
code/qcommon/: cvar.cpp  qcommon.h
lib/ircclient/: CMakeLists.txt  sockets.c
lib/libircclient/: CMakeLists.txt
